# cfserdika

./: flake.nix  pyproject.toml
cfserdika/: cli.py  client.py  wsgi.py
