[tool.poetry]
name = "cfserdika"
version = "0.1.0"
description = ""
authors = ["Albert Peschar <albert@peschar.net>"]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
pytz = "^2023.3"
flask = "^2.2.3"
icalendar = "^5.0.4"
gunicorn = "^20.1.0"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
cfserdika = "cfserdika.cli:main"
